correct spacings on filterpanel

--- a/gui/php/cakephp/webroot/css/lms.css
+++ b/gui/php/cakephp/webroot/css/lms.css
@@ -100,6 +100,12 @@
 	margin-bottom: 0em;
 }
 
+.questions nav.navbar:first-child + div {
+	margin-top: 0.1em;
+	margin-left: 0.1em;
+	margin-right: 0.1em;
+}
+
 .badge {
 	background-color: #f0ad4e!important;
 }
